# research-pipeline

./: .gitignore  CODEOWNERS  PLAN.md  README.md  TODO.md  config.example.yaml  pyproject.toml
research_pipeline/: __init__.py  budget.py  cli.py  config.py  models.py  orchestrator.py
research_pipeline/agent/: __init__.py  base.py  prompts.py  tools.py
research_pipeline/agents/: __init__.py  discovery.py  implementer.py  reader.py  synthesizer.py  tester.py
research_pipeline/paper/: __init__.py  chunk.py  extract.py  fetch.py
research_pipeline/pipeline/: __init__.py  engine.py  stages.py  types.py
tests/: test_budget.py  test_chunk.py  test_config.py  test_models.py
